<resources>
    <string name="app_name">Videohub</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
z

    <!-- Common -->
    <string name="search_video_on_videohub">Search video on VideoHub</string>
    <string name="search">Search</string>
    <string name="log_out">Logout</string>
    <string name="successful">Successful</string>
    <string name="no_results_were_found">No results were found</string>

    // OK, DONE, Cancel, Network error message

    <!--  Login -->

    <string name="login_failed">Log in Failed</string>
    <string name="login_cancelled">Log in Cancelled</string>
    <string name="login_successful">Log in Successful</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="login_with_google">Log in with Google</string>

    <!-- Item -->
    <string name="item_channel">Channel</string>
    <string name="item_title">Title</string>
    <string name="item_duration">Duration</string>
    <string name="add_to_my_playlist">Add to My Playlist</string>
    <string name="delete">Delete</string>
    <string name="default_notification_channel_id">Have a nice day with Videohub!</string>
    <string name="info">info</string>
    <string name="info_description">descript</string>
    <string name="info_uri">uri</string>
    <string name="tv_history">Time usage:</string>
    <string name="channel_name">youtube_audio</string>
    <string name="channel_description">play_audio</string>

    <!--  Home -->

</resources>
